Se optimiza todo el código para Java 25 y Mockito 5